Update index.html via editor

--- a/index.html
+++ b/index.html
@@ -102,7 +102,30 @@
             scroll-behavior: smooth;
         }
     </style>
-</head>
+
+  <script type="application/ld+json">
+  [
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Burbank AI Lead Engine For Local Business Growth",
+    "description": "Burbank AI Lead Engine - AI Captures Leads. Automation Books Clients. You Scale Fast. 24/7 AI System That Captures Local Leads for Local Business Growth.",
+    "email": "dandowneyseo@gmail.com",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "dandowneyseo@gmail.com",
+      "contactType": "customer service"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Burbank AI Lead Engine For Local Business Growth",
+    "description": "Burbank AI Lead Engine - AI Captures Leads. Automation Books Clients. You Scale Fast. 24/7 AI System That Captures Local Leads for Local Business Growth."
+  }
+]
+  </script>
+  </head>
 <body class="smooth-scroll">
     <!-- Header & Navigation -->
     <header class="sticky top-0 z-50 bg-gray-900 bg-opacity-95 backdrop-blur-md border-b border-gray-800">
