Add Google Search Console meta tag verification

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
   ]
 }
 </script>
+    <meta name="google-site-verification" content="9bb3a4a9dc18f6035097" />
 </head>
  <body class="smooth-scroll">
   <!-- Header & Navigation -->
